tests/ui/pattern/move-ref-patterns/move-ref-patterns-closure-captures.stderr
error[E0277]: expected a `FnMut()` closure, found `{closure@$DIR/move-ref-patterns-closure-captures.rs:9:14: 9:16}`
  --> $DIR/move-ref-patterns-closure-captures.rs:17:19
   |
LL |     accept_fn_mut(&c1);
   |     ------------- ^^^ expected an `FnMut()` closure, found `{closure@$DIR/move-ref-patterns-closure-captures.rs:9:14: 9:16}`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `FnMut<()>` is not implemented for closure `{closure@$DIR/move-ref-patterns-closure-captures.rs:9:14: 9:16}`
   = note: wrap the `{closure@$DIR/move-ref-patterns-closure-captures.rs:9:14: 9:16}` in a closure with no arguments: `|| { /* code */ }`
   = note: `{closure@$DIR/move-ref-patterns-closure-captures.rs:9:14: 9:16}` implements `FnOnce`, but it must implement `FnMut`, which is more general
note: required by a bound in `accept_fn_mut`
  --> $DIR/move-ref-patterns-closure-captures.rs:4:31
   |
LL |     fn accept_fn_mut(_: &impl FnMut()) {}
   |                               ^^^^^^^ required by this bound in `accept_fn_mut`

error[E0277]: expected a `Fn()` closure, found `{closure@$DIR/move-ref-patterns-closure-captures.rs:9:14: 9:16}`
  --> $DIR/move-ref-patterns-closure-captures.rs:18:15
   |
LL |     accept_fn(&c1);
   |     --------- ^^^ expected an `Fn()` closure, found `{closure@$DIR/move-ref-patterns-closure-captures.rs:9:14: 9:16}`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Fn<()>` is not implemented for closure `{closure@$DIR/move-ref-patterns-closure-captures.rs:9:14: 9:16}`
   = note: wrap the `{closure@$DIR/move-ref-patterns-closure-captures.rs:9:14: 9:16}` in a closure with no arguments: `|| { /* code */ }`
   = note: `{closure@$DIR/move-ref-patterns-closure-captures.rs:9:14: 9:16}` implements `FnOnce`, but it must implement `Fn`, which is more general
note: required by a bound in `accept_fn`
  --> $DIR/move-ref-patterns-closure-captures.rs:5:27
   |
LL |     fn accept_fn(_: &impl Fn()) {}
   |                           ^^^^ required by this bound in `accept_fn`

error[E0277]: expected a `Fn()` closure, found `{closure@$DIR/move-ref-patterns-closure-captures.rs:20:14: 20:16}`
  --> $DIR/move-ref-patterns-closure-captures.rs:26:15
   |
LL |     accept_fn(&c2);
   |     --------- ^^^ expected an `Fn()` closure, found `{closure@$DIR/move-ref-patterns-closure-captures.rs:20:14: 20:16}`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Fn<()>` is not implemented for closure `{closure@$DIR/move-ref-patterns-closure-captures.rs:20:14: 20:16}`
   = note: wrap the `{closure@$DIR/move-ref-patterns-closure-captures.rs:20:14: 20:16}` in a closure with no arguments: `|| { /* code */ }`
   = note: `{closure@$DIR/move-ref-patterns-closure-captures.rs:20:14: 20:16}` implements `FnMut`, but it must implement `Fn`, which is more general
note: required by a bound in `accept_fn`
  --> $DIR/move-ref-patterns-closure-captures.rs:5:27
   |
LL |     fn accept_fn(_: &impl Fn()) {}
   |                           ^^^^ required by this bound in `accept_fn`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
